Improving code readability, move item fixes and removing unnecessary file